Fixed IE6 margin spacing for image caption in collectionlisting

--- a/src/main/resources/web/themes/default/view-collectionlisting.css
+++ b/src/main/resources/web/themes/default/view-collectionlisting.css
@@ -33,6 +33,11 @@
    padding: 0.5em; 
    background-color: #eee;
  }
+ 
+  * html div.vrtx-introduction-image div.vrtx-imagetext {
+   margin-top: -0.3em;
+   margin-right: -0.3em;
+ }
 
  div.vrtx-introduction-image div.vrtx-imagetext span.vrtx-imagetitle{
    font-weight: bold;
